--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Scott Walters
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+Glad you're here! I create adaptive web experiences for the perpetually changing world of business.
